Misc: - Enable type writer on mobile and tablet as well - Some input sanitation contact form - Footer is now responsive - Header slogan mobile alignment fix

--- a/src/styles/components/_logo-animation.scss
+++ b/src/styles/components/_logo-animation.scss
@@ -1,7 +1,7 @@
 .circle {
   display: inline-block;
   vertical-align: middle;
-  position: relative;
+  position: absolute;
   width: 75px;
   height: 75px;
   background-image: url('/img/logo-def-pepcoach-nowhite.png');
