--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -25,6 +25,9 @@
       padding-right: 15px;
     }
   }
+  &:last-of-type {
+    margin-bottom: 0;
+  }
 }
 
 .col {
